<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_logo"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="100"
                android:orientation="horizontal"

                >

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="28dp"
                    android:layout_weight="45"
                    android:background="#FFFFFF"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="45"
                    android:background="#FFFFFF" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edittext"
                android:text="@string/create_account"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>