<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/dot"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/bg_dot"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.036" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <View
        android:id="@+id/before_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:background="#000"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toEndOf="@+id/dot"
        app:layout_constraintStart_toStartOf="@+id/dot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.0026" />

    <View
        android:id="@+id/after_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:background="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dot"
        app:layout_constraintStart_toStartOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/dot"
        app:layout_constraintWidth_percent="0.0026" />


    <RelativeLayout
        android:id="@+id/content_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:padding="@dimen/dp10"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_postava"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/beckham" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:text="@string/username"
            android:textColor="#212121"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/time"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_content_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_relativelayout"
        android:layout_marginStart="120dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:textColor="#676767"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/img_postpic"
        app:layout_constraintTop_toBottomOf="@+id/content_relativelayout" />

    <ImageView
        android:id="@+id/img_postpic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_content_status"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="15dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/picturecontent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/rv_sub_recycleview"
        app:layout_constraintTop_toBottomOf="@+id/txt_content_status"
        tools:ignore="ContentDescription" />
    <ImageButton
        android:id="@+id/imgbt_post"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/ic_post_picture"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_content_status"
        tools:ignore="ContentDescription,MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_sub_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_postpic"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="15dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/content_like_comment"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_postpic">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/content_like_comment"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rv_sub_recycleview"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_sub_recycleview">

        <ImageButton
            android:id="@+id/img_like"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_heart"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/numbercomment1"
            android:textSize="14sp" />


        <ImageButton
            android:id="@+id/img_comment"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_comment"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/numbercomment2"
            android:textSize="14sp"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/content_like_comment"
        android:layout_marginStart="68dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="15dp"
        android:background="#616161"
        app:layout_constraintTop_toBottomOf="@+id/content_like_comment" />

</androidx.constraintlayout.widget.ConstraintLayout>